# wenji

./: .env.example  .gitignore  .spectra.yaml  20260509_README.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY_REVIEW.md  pyproject.toml
.claude/skills/eval-regression-guard/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: deployment.md  extending.md
examples/: axes.yaml  eval.jsonl  walkthrough.md  wenji.yaml
examples/articles/article/: 2026-03-24 邊界消失+穩定幣如何打通國際資金往來的最後一哩路.md  20260405-Where_Do_You_Stand_in_the_AI_Library.md
examples/articles/classical/: du-fu-chunwang.md  li-bai-jingyesi.md  wang-wei-shanju.md
examples/articles/law/: 勞動基準法.md
examples/articles/sermon/: 2021-05-26_2021靈糧誌No_51_信仰是職場的優勢.md
examples/articles/tech/: onnx-cpu-inference.md  sqlite-fts5-overview.md
openspec/changes/add-doctor-and-startup-check/: design.md  proposal.md  tasks.md
openspec/changes/api-slim-0-5/: BACKLOG.md  design.md  proposal.md  tasks.md
openspec/changes/chunk-level-vectors/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/cleanup-build-telemetry/: BACKLOG.md
openspec/changes/decouple-logos-and-fix-readme/: .openspec.yaml  deploy-handover.md  design.md  proposal.md  tasks.md
openspec/changes/fail-loud-runtime/: tasks.md
openspec/changes/ingest-throughput-and-operability/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/release-v0-4-0/: .openspec.yaml  tasks.md
openspec/changes/web-concurrency-hardening/: .openspec.yaml  design.md  (+2 more)
scripts/: audit_release.sh  run_wenji_r0_baseline.sh  run_wenji_r1_trim_baseline.sh
src/wenji/: __init__.py
tests/: benchmark_80_v2_snapshot.json
tests/wenji/: conftest.py  test_aggregate.py  test_api_stats_segment.py  test_ask.py  test_branding.py  test_classify.py  test_classify_axes_loader.py  test_classify_rules.py  test_cli_aggregate.py  test_cli_chunks.py  test_cli_doctor.py  test_cli_search.py  test_cli_search_startup_gate.py  test_cli_smoke.py  test_cli_stats_segment.py  test_config.py  test_config_wiring.py  test_core_chunk.py  test_core_db.py  test_core_errors.py  test_core_hash.py  test_core_model_download.py  test_core_normalize.py  test_corpus_trim.py  test_eval_baseline_rewrite.py  test_eval_baseline_runner.py  test_eval_jsonl.py  test_eval_metrics.py  test_eval_migrate_jsonl.py  test_eval_report.py  test_eval_rollup.py  test_eval_run.py  test_examples_loader.py  test_ingest_embed.py  test_ingest_frontmatter.py  test_ingest_jieba.py  test_ingest_logos_db.py  test_ingest_pipeline.py  test_llm_config.py  test_loader_benchmark_v2.py  (+24 more)
(+142 files in other folders)
