[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wenji"
version = "0.3.6.1"
description = "Generic Chinese markdown RAG framework: hybrid BM25 + vector search, axis-aware classification, jitter-aware eval."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "notoriouslab" }]
keywords = ["rag", "chinese", "search", "markdown", "bm25", "vector", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jieba>=0.42",
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "tokenizers>=0.19",
    "huggingface-hub>=0.20",
    "typer>=0.12",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "build>=1.2",
]

[project.scripts]
wenji = "wenji.cli:app"

[project.urls]
Homepage = "https://github.com/notoriouslab/wenji"
Repository = "https://github.com/notoriouslab/wenji"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["wenji*"]

[tool.setuptools.package-data]
wenji = ["core/*.sql", "**/*.yaml", "web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests/wenji"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers --import-mode=importlib -m 'not integration'"
markers = [
    "integration: end-to-end tests that download models (~600 MB) and run real ONNX inference. Run with `pytest -m integration`.",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests/wenji"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/wenji/cli/*.py" = ["B008"]  # typer.Option/Argument as defaults is idiomatic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
